# Ejercicios_2corte

./: callbacks.cpp  dos_sumas.cpp  palindromo.cpp
4ta_entrega/: CMakeLists.txt
4ta_entrega/include/: CarritoCompras.h  ItemCarrito.h  Producto.h  Usuario.h
4ta_entrega/src/: CarritoCompras.cpp  ItemCarrito.cpp  Producto.cpp  Usuario.cpp  main.cpp
entrega3_2Cort/: CMakeLists.txt
entrega3_2Cort/include/: Auto.h  Biblioteca.h  Bicicleta.h  Libro.h  SistemaAlquiler.h  Vehiculo.h
entrega3_2Cort/scr/: Auto.cpp  Biblioteca.cpp  Bicicleta.cpp  Libro.cpp  SistemaAlquiler.cpp  Vehiculo.cpp  mainAlquiler.cpp  mainbiblioteca.cpp
parcial2/: CMakeLists.txt  Doxyfile
parcial2/include/: DispositivoInteligente.h
parcial2/src/: DispositivoInteligente.cpp  main.cpp
